--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ spring.h2.console.enabled=true
 server.port=0
 
 
+# API Endpoints
+bajaj.api.base-url=https://bfhldevapigw.healthrx.co.in/hiring
+bajaj.api.generate-webhook-path=/generateWebhook/JAVA
+bajaj.api.submit-solution-path=/testWebhook/JAVA
+
+# User Details for the initial request
+bajaj.user.name=Punit Punde
+bajaj.user.regNo=358
+bajaj.user.email=punitpunde@gmail.com
